--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Multiplayer Game</title>
+  <link rel="icon" href="./icon.ico">
 
   <style>
     #screen {
